# guess_number

./: .gitignore  CMakeLists.txt  README.md  game.cpp  game.h  rand_generator.cpp  rand_generator.h  score.cpp  score.h  settings.cpp  settings.h
